; ModuleID = '/home/carl/AnghaBench/freebsd/bin/stty/extr_key.c_f_cbreak.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/stty/extr_key.c_f_cbreak.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.info = type { i32, %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32, i32, i32 }

@BRKINT = common dso_local global i32 0, align 4
@IXON = common dso_local global i32 0, align 4
@IMAXBEL = common dso_local global i32 0, align 4
@OPOST = common dso_local global i32 0, align 4
@ISIG = common dso_local global i32 0, align 4
@IEXTEN = common dso_local global i32 0, align 4
@ICANON = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @f_cbreak(%struct.info* %0) #0 {
  %2 = alloca %struct.info*, align 8
  store %struct.info* %0, %struct.info** %2, align 8
  %3 = load %struct.info*, %struct.info** %2, align 8
  %4 = getelementptr inbounds %struct.info, %struct.info* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.info*, %struct.info** %2, align 8
  %9 = call i32 @f_sane(%struct.info* %8)
  br label %44

10:                                               ; preds = %1
  %11 = load i32, i32* @BRKINT, align 4
  %12 = load i32, i32* @IXON, align 4
  %13 = or i32 %11, %12
  %14 = load i32, i32* @IMAXBEL, align 4
  %15 = or i32 %13, %14
  %16 = load %struct.info*, %struct.info** %2, align 8
  %17 = getelementptr inbounds %struct.info, %struct.info* %16, i32 0, i32 1
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = or i32 %19, %15
  store i32 %20, i32* %18, align 4
  %21 = load i32, i32* @OPOST, align 4
  %22 = load %struct.info*, %struct.info** %2, align 8
  %23 = getelementptr inbounds %struct.info, %struct.info* %22, i32 0, i32 1
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = or i32 %25, %21
  store i32 %26, i32* %24, align 4
  %27 = load i32, i32* @ISIG, align 4
  %28 = load i32, i32* @IEXTEN, align 4
  %29 = or i32 %27, %28
  %30 = load %struct.info*, %struct.info** %2, align 8
  %31 = getelementptr inbounds %struct.info, %struct.info* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = or i32 %33, %29
  store i32 %34, i32* %32, align 4
  %35 = load i32, i32* @ICANON, align 4
  %36 = xor i32 %35, -1
  %37 = load %struct.info*, %struct.info** %2, align 8
  %38 = getelementptr inbounds %struct.info, %struct.info* %37, i32 0, i32 1
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 4
  %41 = and i32 %40, %36
  store i32 %41, i32* %39, align 4
  %42 = load %struct.info*, %struct.info** %2, align 8
  %43 = getelementptr inbounds %struct.info, %struct.info* %42, i32 0, i32 0
  store i32 1, i32* %43, align 8
  br label %44

44:                                               ; preds = %10, %7
  ret void
}

declare dso_local i32 @f_sane(%struct.info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
